package.json change

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myentertainmet-studios",
-  "homepage": "https://dagsthe.github.io/<MyEntertainment>/",
+  "homepage": "https://dagsthe.github.io/MyEntertainment/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
