--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "myentertainmet-studios",
-  "homepage": "https://dagsthe.github.io/MyEntertainment/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,8 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "firebase deploy"
   },
   "dependencies": {
     "@designbycode/tailwindcss-text-stroke": "^1.3.0",
