--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "firebase deploy"
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@designbycode/tailwindcss-text-stroke": "^1.3.0",
